# fsinodes

./: README.md
doc/src/: main.tex
src/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  main.cpp
src/fs/: FileSystem.cpp  FileSystem.hpp  I_FSContainer.hpp  I_FSOps.hpp
src/fs/components/: Data.cpp  Data.hpp  DataBlock.cpp  DataBlock.hpp  Inode.cpp  Inode.hpp  Inodes.cpp  Inodes.hpp  Superblock.cpp  Superblock.hpp
src/fs/components/util/: Bitmap.hpp  Iterator_DataBlocks.cpp  Iterator_DataBlocks.hpp  Iterator_DirItems.cpp  Iterator_DirItems.hpp
src/fs/container/: I_FSContainer.hpp  MMappedFile.cpp  MMappedFile.hpp
src/fs/container/io/: A_OffsetReadableWritable.hpp  I_ReadableWritable.hpp  I_Resizable.hpp
src/fs/sections/bitmaps/: Bitmap.cpp  Bitmap.hpp
src/fs/sections/data/: Data.cpp  Data.hpp  DataBlock.cpp  DataBlock.hpp
src/fs/sections/data/util/: Iterator_DataBlocks.cpp  Iterator_DataBlocks.hpp  Iterator_DirItems.cpp  Iterator_DirItems.hpp
src/fs/sections/inodes/: Inode.cpp  Inode.hpp  Inodes.cpp  Inodes.hpp
src/fs/sections/superblock/: Superblock.cpp  Superblock.hpp
src/io/: A_OffsetReadableWritable.hpp  I_ReadableWritable.hpp  I_Resizable.hpp  MMappedFile.cpp  MMappedFile.hpp
src/util/: FSCmdParser.cpp  FSCmdParser.hpp
